# strikehub

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PRD-IPC.md  PRD.md  README.md  build-defaults.toml  connector-versions.env  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  sync-version.yml
assets/: icon_256x256.rgba  strikehub.desktop
chart/strikehub/: Chart.yaml  values.yaml
chart/strikehub/templates/: _helpers.tpl  clusterrolebinding.yaml  deployment.yaml  ingress.yaml  pvc-strikehub-data.yaml  service.yaml  serviceaccount.yaml
crates/sh-core/: Cargo.toml  build.rs
crates/sh-core/src/: allowlist.rs  auth.rs  bridge.rs  config.rs  connector_fetch.rs  embedded.rs  error.rs  ipc.rs  ipc_runner.rs  lib.rs  matrix_ws.rs  oauth.rs  ott.rs  preflight.rs  proxy.rs  registry.rs  sentry_init.rs  transport.rs  ws_relay.rs
crates/sh-ui/: Cargo.toml  build.rs
crates/sh-ui/src/: app.rs  lib.rs  main.rs  theme.rs
crates/sh-ui/src/components/: account.rs  content.rs  login.rs  logo.rs  mod.rs  preflight.rs  setup.rs  sidebar.rs  tos.rs
docs/: APPIMAGE.md
docs/windows/: building.md  wsl.md
scripts/: build-and-run-appimage.sh  build-appimage-with-connectors.sh  build-appimage.sh  build-dmg.sh  build-msi.ps1  build-windows-sfx.sh  install-hooks.sh  test-env-fix.sh
wix/: License.rtf  main.wxs
